codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__long_checkout_40x13.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: "terminal.backend().to_string().replace('\\\\', \"/\")"
---
  Folder access
  workspace/…/repository              
  Trust this folder? Ore can read,
  edit, and run files here, subject to
  your permission settings. Folder
  settings can run code automatically,
  even without a model request.
  Continue only if you trust these
  files. Your trust decision will be
  saved.
› 1. Trust and continue                 
  2. Quit
  enter continue · esc quit
