codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__renders_snapshot_for_trust_error.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: terminal.backend()
---

  Folder access
  /workspace/project                                                

  Trust this folder? Ore can read, edit, and run files here, subject
  to your permission settings. Folder settings can run code
  automatically, even without a model request. Continue only if you
  trust these files. Your trust decision will be saved.

› 1. Trust and continue                                               
  2. Quit

  Failed to set trust for /workspace/project: config/batchWrite     
  failed in TUI: Invalid configuration: features.fast_mode=true is  
  not supported; allowed set [fast_mode=false]                      

  enter continue · esc quit
